package eapli.base.costumermanagement.domain;

public enum Gender {
    Masculino, Feminino
}
