@startuml

left to right direction
'skinparam linetype ortho

class User <<Entity>> <<root>>{
 +Boolean state
}

class Customer <<Entity>> <<root>> {}

class Order <<Entity>> <<root>> {}

class Name <<Value object>> {}

class Gender <<Value object>> {}

class Email <<Value object>> {}

class Password <<Value object>>

enum UserRoles <<Value object>> {}

User --> "1" Name
User --> "1" Gender
User --> "1" Email
User --> "1" Password
User ..> UserRoles : managedByAdmin
User --> "1..*" UserRoles

Customer --|> User


class VAT <<Value object>>{}
class PhoneNumber <<Value object>>{}
class Address <<Value object>>{}
class Date <<Value object>>

Customer --> "1" VAT
Customer --> "1..*" Address
Customer --> "1" PhoneNumber
Customer --> "1" Date : birthdate

class Price <<Value object>>{}
class Status <<Entity>> <<root>>{}
class ShipmentMethod <<Entity>> <<root>>{
    +Price
}

Order --> Customer : placedBy
Order --> Date :  regist date
Order --> Price
Order --> Price
Order --> Address
Order --> Address
Order --> Status : state
Order --> ShipmentMethod

class Product <<Entity>> <<root>>{}
class ProductCategory <<Entity>> <<root>>{}

Order --> "1..*" Product

ProductCategory --> "1..*" Product

User ..> ProductCategory
User ..> Product
User ..> "1" User : credential
User ..> "1" Customer : newByAdmin
User <.. "1" Order : clerk

class WareHousePlant<<entity root>> {}
class Aisles <<entity>> {}
class Accessibility <<value object>> {}
class Rows <<entity>> {}
class AGVDocks <<entity>> {}
class AGV<<entity root>>{}
class StatusAGV<<value object>>{}
class AutonomyHours<<value object>>{}
class MaxVolume<<value object>>{}
class MaxWeight<<value object>>{}
class Position<<value object>>{}
class Task<<entity root>>{}
class StatusTask<<value object>>{}

User ..> "1" WareHousePlant : setupByWarehouseEmployee
WareHousePlant "1" ..> "*" AGVDocks : contains
WareHousePlant "1" ..> "*" Aisles
Aisles "1" ..> "*" Rows
Aisles "1" ..> "1" Accessibility
WareHousePlant "1"..> "*" AGV : houses
AGV "1" ..> "1" StatusAGV
AGV "1" ..> "1" AutonomyHours
AGV "1" ..> "1" MaxVolume
AGV "1" ..> "1" MaxWeight
AGV "1" ..> "1" Position
AGV "1"..> "1" Task : is responsible for
Task "1" ..> "1" StatusTask

class Survey <<Entity>> <<root>>{}
class Questionnaire <<Entity root>>{}

User ..> "1..*" Survey
Customer ..> "1..*" Survey : answer
Survey --> "1" Questionnaire

@enduml